--- a/index.html
+++ b/index.html
@@ -3,38 +3,158 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ECMW Baseline Test</title>
+    <title>ECMW Global Pack Manager</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;700;800&display=swap');
+        body { font-family: 'Plus Jakarta Sans', sans-serif; }
+    </style>
 </head>
-<body class="bg-slate-900 text-slate-100 min-h-screen flex items-center justify-center">
+<body class="bg-slate-50 text-slate-900">
     <div id="root"></div>
 
     <script type="text/babel">
-        function App() {
-            const [status, setStatus] = React.useState("Testing...");
-            
-            return (
-                <div className="p-8 bg-slate-800 rounded-2xl shadow-2xl border border-slate-700 text-center max-w-md">
-                    <h1 className="text-2xl font-black text-blue-400 mb-4">ECMW CONNECTED</h1>
-                    <p className="text-slate-400 mb-6">If you see this screen, your Vercel deployment and React engine are working 100% correctly.</p>
-                    <div className="py-2 px-4 bg-slate-700 rounded-lg font-mono text-emerald-400 mb-6">
-                        Status: {status}
-                    </div>
-                    <button 
-                        onClick={() => setStatus("Ready for Dashboard")}
-                        className="w-full py-3 bg-blue-600 hover:bg-blue-500 rounded-xl font-bold transition-all active:scale-95"
-                    >
-                        Confirm Connection
-                    </button>
-                </div>
-            );
-        }
+        const { useState, useMemo, useEffect } = React;
 
-        const root = ReactDOM.createRoot(document.getElementById('root'));
-        root.render(<App />);
-    </script>
-</body>
-</html>
+        // --- CONSTANTS & DATA ---
+        const ENTITY_OPTIONS = ["ECM4", "ECM7", "ECM10"];
+        const STATUS_OPTIONS = ["Repo IPs", "Verification", "ADD contact", "Repoting", "EMPTY", "LOGING", "Hold", "DOWN"];
+        
+        const INITIAL_DATA = [
+            {"id":"1","entity":"ECM4","entityProd":"ECM4","platform":"ECM_APP","team":"A","localExternal":"External","pack":"Pack1","dataSeeds":"oui","server":"194.163.144.27","disk":"externe","rdps":"repo","password":"LABO@0000","interval":"1-3999","browser":"Chrome","status":"Repoting","countProfiles":"3999","backup":"Non","totalSeedsOk":"","notes":""},
+            {"id":"2","entity":"ECM4","entityProd":"ECM4","platform":"ECM_APP","team":"A","localExternal":"External","pack":"Pack2","dataSeeds":"oui","server":"185.216.75.117","disk":"externe","rdps":"repo","password":"LABO@0000","interval":"1-5000","browser":"Chrome","status":"Repo IPs","countProfiles":"5000","backup":"Non","totalSeedsOk":"","notes":""},
+            {"id":"3","entity":"ECM4","entityProd":"ECM4","platform":"ECM_APP","team":"A","localExternal":"External","pack":"Pack3","dataSeeds":"non","server":"66.94.120.85","disk":"externe","rdps":"repo","password":"LABO@0000","interval":"1-3078","browser":"Chrome","status":"Repo IPs","countProfiles":"3078","backup":"Non","totalSeedsOk":"","notes":""},
+            {"id":"4","entity":"ECM4","entityProd":"ECM4","platform":"ECM_APP","team":"A","localExternal":"External","pack":"Pack4","dataSeeds":"oui","server":"194.163.130.102","disk":"externe","rdps":"repo","password":"LABO@0000","interval":"1-3000","browser":"Chrome","status":"Repoting","countProfiles":"3000","backup":"Non","totalSeedsOk":"","notes":""},
+            {"id":"5","entity":"ECM4","entityProd":"ECM4","platform":"ECM_APP","team":"A","localExternal":"Local","pack":"Pack5","dataSeeds":"non","server":"4","disk":"E","rdps":"ECM4_Gmail_1","password":"Password@1.","interval":"1-5000","browser":"Chrome","status":"Repoting","countProfiles":"3746","backup":"Non","totalSeedsOk":"","notes":""},
+            {"id":"6","entity":"ECM4","entityProd":"ECM4","platform":"ECM_APP","team":"A","localExternal":"Local","pack":"Pack6","dataSeeds":"non","server":"4","disk":"E","rdps":"ECM4_Gmail_2","password":"Password@2.","interval":"5001-10000","browser":"Chrome","status":"Verification","countProfiles":"3791","backup":"Non","totalSeedsOk":"","notes":""},
+            {"id":"7","entity":"ECM4","entityProd":"ECM4","platform":"ECM_APP","team":"A","localExternal":"Local","pack":"Pack7","dataSeeds":"non","server":"4","disk":"E","rdps":"ECM4_Gmail_3","password":"Password@3.","interval":"10001-15000","browser":"Chrome","status":"Repo IPs","countProfiles":"3428","backup":"Non","totalSeedsOk":"","notes":""},
+            {"id":"8","entity":"ECM4","entityProd":"ECM4","platform":"ECM_APP","team":"A","localExternal":"Local","pack":"Pack8","dataSeeds":"non","server":"3","disk":"G","rdps":"ECM4_Gmail_1","password":"Password@1.","interval":"15001-20000","browser":"Chrome","status":"Repoting","countProfiles":"2560","backup":"Non","totalSeedsOk":"","notes":""},
+            {"id":"9","entity":"ECM4","entityProd":"ECM4","platform":"ECM_APP","team":"A","localExternal":"Local","pack":"Pack9","dataSeeds":"non","server":"3","disk":"G","rdps":"ECM4_Gmail_2","password":"Password@2.","interval":"20001-25000","browser":"Chrome","status":"Repo IPs","countProfiles":"3025","backup":"Non","totalSeedsOk":"","notes":""},
+            {"id":"10","entity":"ECM4","entityProd":"ECM4","platform":"ECM_APP","team":"A","localExternal":"Local","pack":"Pack10","dataSeeds":"non","server":"4","disk":"F","rdps":"ECM4_Gmail_4","password":"Password@4.","interval":"28793-30391","browser":"Chromium","status":"ADD contact","countProfiles":"774","backup":"Non","totalSeedsOk":"","notes":""},
+            {"id":"11","entity":"ECM4","entityProd":"ECM4","platform":"ECM_APP","team":"A","localExternal":"Local","pack":"Pack11","dataSeeds":"non","server":"7","disk":"H","rdps":"ECM4_Gmail_1","password":"tHp**DHpQK7g","interval":"31152-37181","browser":"webview","status":"Repoting","countProfiles":"4251","backup":"Non","totalSeedsOk":"","notes":""},
+            {"id":"12","entity":"ECM4","entityProd":"ECM4","platform":"ECM_APP","team":"A","localExternal":"Local","pack":"Pack12","dataSeeds":"non","server":"7","disk":"F","rdps":"ECM4_Gmail_2","password":"(DC%c(D#V5f*","interval":"37182-39179","browser":"webview","status":"Verification","countProfiles":"552","backup":"Non","totalSeedsOk":"","notes":""},
+            {"id":"13","entity":"ECM4","entityProd":"ECM4","platform":"ECM_APP","team":"A","localExternal":"Local","pack":"Pack13","dataSeeds":"non","server":"3","disk":"I","rdps":"ECM4_gmail_5","password":"Password@5.","interval":"40000-42000","browser":"webview","status":"Repoting","countProfiles":"1989","backup":"Non","totalSeedsOk":"","notes":""},
+            {"id":"14","entity":"ECM4","entityProd":"ECM4","platform":"iMACROS","team":"A","localExternal":"External","pack":"Pack14","dataSeeds":"non","server":"144.126.130.165","disk":"externe","rdps":"repo4","password":"ECM4@6666","interval":"85--1782","browser":"palemoon","status":"Repo IPs","countProfiles":"1711","backup":"Non","totalSeedsOk":"","notes":""},
+            {"id":"15","entity":"ECM4","entityProd":"ECM4","platform":"iMACROS","team":"A","localExternal":"External","pack":"Pack15","dataSeeds":"non","server":"194.163.144.27","disk":"externe","rdps":"repo1","password":"ECM4@6666","interval":"3--13753","browser":"palemoon","status":"Repo IPs","countProfiles":"1914","backup":"Non","totalSeedsOk":"","notes":""},
+            {"id":"23","entity":"ECM7","entityProd":"ECM5","platform":"ECM_APP","team":"A","localExternal":"Local","pack":"Pack23","dataSeeds":"oui","server":"4","disk":"D","rdps":"ECM5_gmail_1","password":"Njs-.;:pg,rb6Xyw5LW49/","interval":"1-5000","browser":"Chrome","status":"Repoting","countProfiles":"3895","backup":"Non","totalSeedsOk":"","notes":""},
+            {"id":"45","entity":"ECM7","entityProd":"ECM3","platform":"ECM_APP","team":"B","localExternal":"Local","pack":"Pack45","dataSeeds":"non","server":"1","disk":"D","rdps":"ecm3_gmail_1","password":"Password@1.","interval":"1-5000","browser":"Chrome","status":"Repoting","countProfiles":"2969","backup":"Non","totalSeedsOk":"","notes":""},
+            {"id":"80","entity":"ECM10","entityProd":"ECM2","platform":"ECM_APP","team":"B","localExternal":"External","pack":"Pack80","dataSeeds":"non","server":"70.36.107.56","disk":"externe","rdps":"admin","password":"ECM2_uC84","interval":"1---6000","browser":"Chrome","status":"ADD contact","countProfiles":"5751","backup":"Non","totalSeedsOk":"","notes":""}
+        ];
+
+        // --- HELPERS ---
+        const getStatusBadge = (status) => {
+            const s = status.toLowerCase();
+            if (s.includes('repot') || s.includes('active')) return 'bg-emerald-100 text-emerald-700 border-emerald-200';
+            if (s.includes('down') || s.includes('hold')) return 'bg-rose-100 text-rose-700 border-rose-200';
+            return 'bg-amber-100 text-amber-700 border-amber-200';
+        };
+
+        // --- COMPONENTS ---
+        function App() {
+            const [packs, setPacks] = useState(() => {
+                const saved = localStorage.getItem('ecmw_fleet');
+                return saved ? JSON.parse(saved) : INITIAL_DATA;
+            });
+            const [search, setSearch] = useState('');
+            const [filterEntity, setFilterEntity] = useState('');
+
+            useEffect(() => {
+                localStorage.setItem('ecmw_fleet', JSON.stringify(packs));
+            }, [packs]);
+
+            const filteredPacks = useMemo(() => {
+                return packs.filter(p => {
+                    const matchesSearch = Object.values(p).some(v => String(v).toLowerCase().includes(search.toLowerCase()));
+                    const matchesEntity = !filterEntity || p.entity === filterEntity;
+                    return matchesSearch && matchesEntity;
+                });
+            }, [packs, search, filterEntity]);
+
+            const totalProfiles = filteredPacks.reduce((acc, p) => acc + (parseInt(p.countProfiles) || 0), 0);
+
+            return (
+                <div className="min-h-screen">
+                    {/* Header */}
+                    <nav className="bg-white border-b px-6 py-4 flex justify-between items-center sticky top-0 z-10 shadow-sm">
+                        <div className="flex items-center gap-3">
+                            <div className="w-10 h-10 bg-blue-600 rounded-xl flex items-center justify-center shadow-lg shadow-blue-200">
+                                <i className="fas fa-layer-group text-white text-lg"></i>
+                            </div>
+                            <div>
+                                <h1 className="font-extrabold text-xl tracking-tight text-slate-800 uppercase">ECMW Fleet</h1>
+                                <p className="text-[10px] font-bold text-slate-400 uppercase tracking-widest">Global Dashboard</p>
+                            </div>
+                        </div>
+                        <div className="flex gap-3">
+                             <div className="hidden md:flex flex-col text-right mr-4 border-r pr-4">
+                                <span className="text-[10px] font-bold text-slate-400 uppercase">Total Profiles Managed</span>
+                                <span className="text-lg font-black text-blue-600">{totalProfiles.toLocaleString()}</span>
+                             </div>
+                             <button className="bg-slate-800 text-white px-5 py-2.5 rounded-xl font-bold text-sm hover:bg-slate-700 transition-all active:scale-95">
+                                Add New Pack
+                             </button>
+                        </div>
+                    </nav>
+
+                    <main className="p-6 max-w-[1600px] mx-auto">
+                        {/* Stats Bar */}
+                        <div className="grid grid-cols-1 md:grid-cols-3 gap-6 mb-8">
+                            <div className="bg-white p-6 rounded-2xl border border-slate-200 shadow-sm">
+                                <p className="text-xs font-bold text-slate-400 uppercase mb-1">Total Active Packs</p>
+                                <p className="text-3xl font-black text-slate-800">{filteredPacks.length}</p>
+                            </div>
+                            <div className="bg-white p-6 rounded-2xl border border-slate-200 shadow-sm">
+                                <p className="text-xs font-bold text-slate-400 uppercase mb-1">Entities Monitored</p>
+                                <p className="text-3xl font-black text-slate-800">{ENTITY_OPTIONS.length}</p>
+                            </div>
+                            <div className="bg-white p-6 rounded-2xl border border-slate-200 shadow-sm">
+                                <p className="text-xs font-bold text-slate-400 uppercase mb-1">Total Capacity</p>
+                                <p className="text-3xl font-black text-blue-600">{totalProfiles.toLocaleString()}</p>
+                            </div>
+                        </div>
+
+                        {/* Filter Bar */}
+                        <div className="bg-white p-4 rounded-xl border border-slate-200 mb-6 flex flex-wrap gap-4 items-center">
+                            <div className="flex-1 min-w-[300px] relative">
+                                <i className="fas fa-search absolute left-4 top-1/2 -translate-y-1/2 text-slate-400"></i>
+                                <input 
+                                    type="text" 
+                                    placeholder="Search server, pack, or IP..." 
+                                    className="w-full pl-12 pr-4 py-3 bg-slate-50 border border-slate-200 rounded-xl focus:ring-2 focus:ring-blue-500 outline-none transition-all text-sm font-semibold"
+                                    value={search}
+                                    onChange={(e) => setSearch(e.target.value)}
+                                />
+                            </div>
+                            <select 
+                                className="px-4 py-3 bg-white border border-slate-200 rounded-xl text-sm font-bold outline-none"
+                                value={filterEntity}
+                                onChange={(e) => setFilterEntity(e.target.value)}
+                            >
+                                <option value="">All Entities</option>
+                                {ENTITY_OPTIONS.map(opt => <option key={opt} value={opt}>{opt}</option>)}
+                            </select>
+                        </div>
+
+                        {/* Table */}
+                        <div className="bg-white rounded-2xl border border-slate-200 shadow-sm overflow-hidden">
+                            <div className="overflow-x-auto">
+                                <table className="w-full text-left border-collapse">
+                                    <thead>
+                                        <tr className="bg-slate-50/50 text-[11px] font-bold text-slate-400 uppercase tracking-wider">
+                                            <th className="p-4 border-b">Entity</th>
+                                            <th className="p-4 border-b">Pack Details</th>
+                                            <th className="p-4 border-b">Server / IP</th>
+                                            <th className="p-4 border-b">Profiles</th>
+                                            <th className="p-4 border-b">Status</th>
+                                            <th className="p-4 border-b text-right">Actions</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody className="divide-y divide-slate-100">
+                                        {filteredPacks.map(p => (
+                                            <tr key={p.id} className="hover:bg-slate-50/50 transition-colors">
+                                                <td className="p-4">
+                                                    <span className="font-black text-blue-600">{p.entity
